--- a/act_Application/Data/json/config.json
+++ b/act_Application/Data/json/config.json
@@ -29,7 +29,7 @@
       },
       "CUOT": {
         "DBQC_SelectCoutasUser": "SELECT (SELECT COUNT(*) FROM act_Cuotas WHERE IdUser = @IdUser AND Estado = 'PENDIENTE') AS TotalCuotas, a.* FROM act_Cuotas a WHERE IdUser = @IdUser AND Estado = 'PENDIENTE'",
-        "DBQC_SelectIdCouta": "SELECT *.a FROM act_Cuotas a WHERE Id = @Id"
+        "DBQC_SelectIdCouta": "SELECT a.* FROM act_Cuotas a WHERE Id = @Id"
       },
       "DEST": {
         "DBQD_SelectDestino": "SELECT Id, NumeroCuentaB, NombreBanco FROM act_CuentasDestino"
@@ -44,7 +44,7 @@
       "ASQ_SelectLastIdPresUser": "SELECT IdPres FROM act_Prestamos WHERE IdUser = @IdUser ORDER BY Id DESC LIMIT 1",
       "ASQ_SelectLastIdCoutaUser": "SELECT Id FROM act_Cuotas WHERE IdUser = @IdUser ORDER BY Id DESC LIMIT 1",
       "ASQ_SelectLastIdMultaUser": "SELECT Id FROM act_Multas WHERE IdUser = @IdUser ORDER BY Id DESC LIMIT 1",
-      "ASQ_SelectLastIdCapturaPantallaUser": "SELECT Id FROM act_CapturasPantalla WHERE IdUser = @IdUser AND Estado 'PENDIENTE' ORDER BY Id DESC LIMIT 1",
+      "ASQ_SelectLastIdCapturaPantallaUser": "SELECT Id FROM act_CapturasPantallas WHERE IdUser = @IdUser AND Estado 'PENDIENTE' ORDER BY Id DESC LIMIT 1",
       "ASQ_SelectCorreoUser": "SELECT Correo FROM act_User WHERE Id = @IdUser"
     },
     "Automatic_Queries": {
